2007-08-20 [ticho]	2.10.0cvs138

	* src/account.c
	* src/prefs_account.h
		Copy all account preferences in account_clone() - some
		were missing.
	* src/prefs_account.c
		Handle empty privacy system combobox gracefully (warning
		instead of a crash).

2007-08-20 [colin]	2.10.0cvs137

	* src/ldapctrl.c
		Fix a leak

2007-08-20 [paul]	2.10.0cvs136

	* src/browseldap.c
	* src/editldap.c
	* src/ldapctrl.c
	* src/ldapquery.c
	* src/ldapquery.h
	* src/ldapserver.c
	* src/ldaputil.c
		add debug_prints
		patch by Michael Rasmussen

2007-08-19 [colin]	2.10.0cvs135

	* src/imap.c
		Fix previous commit. Sensitivity update is needed
		for "Cancel receiving". However when batching we
		don't need to do it for every message flag change,
		just once at the start and once at the end.

2007-08-19 [colin]	2.10.0cvs134

	* src/imap.c
		Remove useless menu updates on session lock/unlock

2007-08-19 [colin]	2.10.0cvs133

	* src/etpan/imap-thread.c
		Make all fetch logs less verbose

2007-08-19 [paul]	2.10.0cvs132

	* src/foldersel.c
	* src/folderview.c
	* src/summaryview.c
		fix bug 1286, 'Can't move a folder into a "Folders
		Only" folder'

2007-08-18 [ticho]	2.10.0cvs131

	* src/editaddress_other_attributes_ldap.c
		Converted option menu for other ldap attributes to GtkComboBox.

2007-08-18 [colin]	2.10.0cvs130

	* src/compose.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_send.c
	* src/send_message.c
		Revert 'send_dialog_mode' meaning to 
		'send_dialog_invisible', so that the 
		new checkbox doesn't change the 
		existing behaviour.

2007-08-18 [paul]	2.10.0cvs129

	* src/summaryview.c
		add missing menu update

2007-08-17 [colin]	2.10.0cvs128

	* src/folder.c
		Set batching after getting flags - maybe fixes
		bug 1292, 'CM crashes on writing mail'

2007-08-16 [ticho]	2.10.0cvs127

	* src/prefs_send.c
		Convert two GtkOptionMenu widgets to new GtkComboBox.
	* src/gtk/combobox.h
	* src/gtk/gtkutils.c
		Allow NULL for GtkComboBox menuitem label, rendering such